--- a/app/views/facmaxpublishings/_form.html.erb
+++ b/app/views/facmaxpublishings/_form.html.erb
@@ -7,8 +7,10 @@
     <p class="primary-form-subheading">Institution Details</p> 
     
     <div class="form-group col-md-6">
-     <label>Name</label>
-     <input type="text" class="form-control" id="name">   
+     <%= f.fields_for :institute, @institute do |institute| %>
+      <label>Name</label>
+      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name" , class: "form-control" %>
+     <% end %>   
     </div>
     <div class="form-group col-md-6">
       <label>Postal Address</label>
