Finished 1st form fully and last form fully

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,6 +7,10 @@
 <div class="col-md-5 award-area"> 
 <h3 class="award-head"align="center">ACADEMIC AWARDS</h3>
 <div class="award-title">
+    <p><%= link_to "Best Accredited Student Branch Award" , new_bestaccreditedstudentbranch_path %> </p>
+</div>
+
+<div class="award-title">
     <p><%= link_to "Best CSI International Students Event Host Award" , new_bestcsiinternationalstudentseventhost_path %> </p>
 </div>
 
@@ -32,6 +36,10 @@
 
 <div class="award-title">
     <p><%= link_to "Highest Committed Student Branch Activist Award" ,new_studentbranchactivist_path %> </p>
+</div>
+
+<div class="award-title">
+    <p><%= link_to "Best Ph D Thesis Award" ,new_bestthesisaward_path %> </p>
 </div>
 </div>
 
