first service award finished

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,9 +67,9 @@
     font-weight: bold;
     color: rgba(12, 12, 12, 0.69);
 }
-.servie-awards{
-    margin-bottom: 15em;
-}
+// .servie-awards{
+//     margin-bottom: 15em;
+// }
 .submitted-details{
     font-family: "Lato";
     font-size: 1.5em;
