--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,7 +46,9 @@
 <div class="col-md-5 award-area">  
 <h3  class="award-head servie-awards" align="center">SERVICE AWARDS</h3>
 
-<!--servie awards-->
+<div class="award-title">
+    <p><%= link_to "CSI Best Regional Chapter Award" , new_regionalchapteraward_path %> </p>
+</div>
 
 </div>
 </div>
