finished second service award

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,6 +49,9 @@
 <div class="award-title">
     <p><%= link_to "CSI Best Regional Chapter Award" , new_regionalchapteraward_path %> </p>
 </div>
+<div class="award-title">
+    <p><%= link_to "CSI Best Service Awards (Individual)" , new_individualserviceaward_path %> </p>
+</div>
 
 </div>
 </div>
