finished 3rd serice award

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,10 +47,13 @@
 <h3  class="award-head servie-awards" align="center">SERVICE AWARDS</h3>
 
 <div class="award-title">
-    <p><%= link_to "CSI Best Regional Chapter Award" , new_regionalchapteraward_path %> </p>
+    <p><%= link_to "Best Regional Chapter Award" , new_regionalchapteraward_path %> </p>
 </div>
 <div class="award-title">
-    <p><%= link_to "CSI Best Service Awards (Individual)" , new_individualserviceaward_path %> </p>
+    <p><%= link_to "Best Service Awards (Individual)" , new_individualserviceaward_path %> </p>
+</div>
+<div class="award-title">
+    <p><%= link_to "Best Chapter Newsletter Award" , new_newsletteraward_path %> </p>
 </div>
 
 </div>
