--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -18,13 +18,25 @@
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-1">
       <%= f.label :imno , "IMNO" %>
       <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
     </div>
+    <div class="form-group col-md-1">
+      <label>Validity</label>
+      <input type="text" class="form-control" id="validity"> 
+    </div>
+    <div class="form-group col-md-1">
+      <label>join_date</label>
+      <input type="text" class="form-control" id="join_date"> 
+    </div>
+    <div class="form-group col-md-1">
+      <label>valid_till</label>
+      <input type="text" class="form-control" id="valid_till"> 
+    </div>
     
     
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>District</label>
       <input type="text" class="form-control" id="district"> 
     </div>
@@ -36,7 +48,7 @@
       <label>Pin</label>
       <input type="text" class="form-control" id="pin"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>State</label>
       <input type="text" class="form-control" id="state"> 
     </div>
@@ -70,8 +82,8 @@
     
       
     <div class="form-group col-md-1">
-      <%= f.label :volunteers %>
-      <%= f.text_field :volunteers , class: "form-control" %>
+      <label>Volunteers</label>
+      <input type="text" class="form-control" id="volunteers"> 
     </div>
     <div class="form-group col-md-1">
       <%= f.label :volunteers_added , "Added"  %>
