--- a/app/views/facmaxpublishings/_form.html.erb
+++ b/app/views/facmaxpublishings/_form.html.erb
@@ -16,9 +16,14 @@
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <%= f.label :imno , "IMNO" %>
       <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
+    </div>
+    
+    <div class="form-group col-md-1">
+      <label>valid_till</label>
+      <input type="text" class="form-control" id="valid_till"> 
     </div>
     <div class="form-group col-md-3">
       <label>District</label>
