--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -15,9 +15,14 @@
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-1">
       <%= f.label :imno , "IMNO" %>
       <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
+    </div>
+   
+    <div class="form-group col-md-1">
+      <label>valid_till</label>
+      <input type="text" class="form-control" id="valid_till"> 
     </div>
     <div class="form-group col-md-3">
       <label>District</label>
@@ -60,8 +65,8 @@
     
       
     <div class="form-group col-md-1">
-      <%= f.label :volunteers %>
-      <%= f.text_field :volunteers , class: "form-control" %>
+      <label>Volunteers</label>
+      <input type="text" class="form-control" id="volunteers"> 
     </div>
     <div class="form-group col-md-1">
       <%= f.label :volunteers_added ,"Added" %>
