--- a/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
@@ -8,17 +8,17 @@
 
 <div class="form-group sf col-md-4">
         
-        <%= f.text_field :competetion_name , class: "form-control" %>
+        <%= f.text_field :competetion_name ,  required: true , class: "form-control" %>
 </div>
 
 <div class="form-group sf col-md-3">
         
-      <%= f.date_field :date_of_event , class: "form-control" %>
+      <%= f.date_field :date_of_event ,  required: true , class: "form-control" %>
 </div>
 
 <div class="form-group sf col-md-4">
         
-        <%= f.text_field :no_of_students_from_abroad_with_country_name , class: "form-control" %>
+        <%= f.text_field :no_of_students_from_abroad_with_country_name  ,  required: true, class: "form-control" %>
 </div>
 
 
