--- a/app/views/studentbranchactivists/_eventdetailsbystudentactivist_fields.html.erb
+++ b/app/views/studentbranchactivists/_eventdetailsbystudentactivist_fields.html.erb
@@ -4,15 +4,15 @@
 
 <div class="form-group sf col-md-3">
        
-        <%= f.text_field :event_name , class: "form-control"%>
+        <%= f.text_field :event_name ,  required: true, class: "form-control"%>
 </div>
 <div class="form-group sf col-md-3">
        
-        <%= f.text_field :event_place , class: "form-control"%>
+        <%= f.text_field :event_place,  required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-5">
         
-        <%= f.text_field :role_played, class: "form-control" %>
+        <%= f.text_field :role_played,  required: true, class: "form-control" %>
 </div>
 
 
