--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -11,7 +11,8 @@
     <div class="form-group col-md-6">
      <%= f.fields_for :institute, @institute do |institute| %>
       <label>Name</label>
-      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name" , class: "form-control" %>
+      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name", 
+      placeholder: "Enter your institution name" , required: true , class: "form-control" %>
      <% end %>    
     </div>
     <div class="form-group col-md-6">
@@ -20,7 +21,7 @@
     </div>
     <div class="form-group col-md-1">
       <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
+      <%= f.text_field :imno  , required: true , class: "form-control" , id:"imno"%>
     </div>
     <div class="form-group col-md-1">
       <label>Validity</label>
@@ -87,7 +88,8 @@
     </div>
     <div class="form-group col-md-1">
       <%= f.label :volunteers_added , "Added"  %>
-      <%= f.text_field :volunteers_added , class: "form-control" %>
+      <%= f.text_field :volunteers_added  , required: true , type: "number",
+      min: "0" ,max: "100", maxlength: "3" , class: "form-control" %>
     </div>
     </div>
     </div>
