--- a/app/views/facmaxpublishings/_form.html.erb
+++ b/app/views/facmaxpublishings/_form.html.erb
@@ -9,7 +9,8 @@
     <div class="form-group col-md-6">
      <%= f.fields_for :institute, @institute do |institute| %>
       <label>Name</label>
-      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name" , class: "form-control" %>
+      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name" , 
+      placeholder: "Enter your institution name" ,title: "Enter your Institution name",  required: true , class: "form-control" %>
      <% end %>   
     </div>
     <div class="form-group col-md-6">
@@ -18,7 +19,7 @@
     </div>
     <div class="form-group col-md-2">
       <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
+      <%= f.text_field :imno  , required: true, class: "form-control" , id:"imno"%>
     </div>
     
     <div class="form-group col-md-1">
@@ -64,20 +65,25 @@
       <p class="primary-form-subheading">Faculty Details</p>  
     <div class="form-group col-md-3">
       <%= f.label :faculty_name , "Name"%>
-      <%= f.text_field :faculty_name , class: "form-control" %>
+      <%= f.text_field :faculty_name  ,  required: true, class: "form-control" %>
     </div>
     <div class="form-group col-md-2">
       <%= f.label :candidate_csi_membership_no , "CSI Mem.No" %>
-      <%= f.text_field :candidate_csi_membership_no , class: "form-control" %>
-    </div>
-    <div class="form-group col-md-3">
-      <%= f.label :faculty_email , "Email" %>
-      <%= f.email_field :faculty_email , class: "form-control" %>
+      <%= f.text_field :candidate_csi_membership_no  , required: true , class: "form-control" %>
     </div>
     <div class="form-group col-md-2">
       <%= f.label :valid_till , "Valid Till" %>
-      <%= f.date_field :valid_till , class: "form-control" %>
+      <%= f.date_field :valid_till , required: true , class: "form-control" %>
     </div>
+    <div class="form-group col-md-3">
+      <%= f.label :faculty_email , "Email" %>
+      <%= f.email_field :faculty_email , required: true , type: "email", class: "form-control" %>
+    </div>
+    
+    
+    <!--remove this field from db -->
+    
+    
     <div class="form-group col-md-2">
       <%= f.label :has_student_branch , "Has Student Branch" %>
       <%= f.check_box :has_student_branch , class: "form-control" %>
