--- a/app/views/facmaxpublishings/_publishingdetailbyfaculty_fields.html.erb
+++ b/app/views/facmaxpublishings/_publishingdetailbyfaculty_fields.html.erb
@@ -5,15 +5,15 @@
 
 <div class="form-group sf col-md-4">
         
-        <%= f.text_field :article_title , class: "form-control" %>
+        <%= f.text_field :article_title , required: true, class: "form-control" %>
 </div>
 <div class="form-group sf col-md-3">
         
-        <%= f.text_field :published_in , class: "form-control" %>
+        <%= f.text_field :published_in , required: true, class: "form-control" %>
 </div>
 <div class="form-group sf col-md-4">
         
-        <%= f.date_field :date_of_publishing , class: "form-control" %>
+        <%= f.date_field :date_of_publishing , required: true, class: "form-control" %>
 </div>
 
 
