--- a/app/views/highestsponsorshipofcsievents/_supportforcsievent_fields.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_supportforcsievent_fields.html.erb
@@ -4,23 +4,23 @@
 
 <div class="form-group sf col-md-2">
         
-        <%= f.text_field :name_of_event , class: "form-control" %>
+        <%= f.text_field :name_of_event ,  required: true , class: "form-control" %>
 </div>
 <div class="form-group sf col-md-2">
       
-        <%= f.date_field :date_of_event , class: "form-control" %>
+        <%= f.date_field :date_of_event,  required: true  , class: "form-control" %>
 </div>
 <div class="form-group sf col-md-3">
        
-        <%= f.text_field :organised_by, class: "form-control" %>
+        <%= f.text_field :organised_by,  required: true , class: "form-control" %>
 </div>
 <div class="form-group sf col-md-2">
        
-        <%= f.text_area :support_details , class: "form-control"%>
+        <%= f.text_area :support_details ,  required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-2">
         
-        <%= f.text_field :monetary_value , class: "form-control"%>
+        <%= f.text_field :monetary_value ,  required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-1 remove-sub-form-button">
    <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger" %> 
