--- a/app/views/longestcontinuoussbcs/_sbc_tenure_detail_fields.html.erb
+++ b/app/views/longestcontinuoussbcs/_sbc_tenure_detail_fields.html.erb
@@ -1,22 +1,23 @@
 <div class="row">
 <div class="nested-fields">
     
-
+<!--add a drop down -->
 <div class="form-group sf col-md-3">
         
-        <%= f.text_field :year , class: "form-control"%>
+        <%= f.text_field :year ,type: "text",  required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-3">
        
-        <%= f.text_field :institution_name , class: "form-control"%>
+        <%= f.text_field :institution_name ,  required: true, class: "form-control"%>
 </div>
 <div class="form-group sf col-md-3">
         
-        <%= f.text_field :imno_of_institution, class: "form-control" %>
+        <%= f.text_field :imno_of_institution ,  required: true, class: "form-control" %>
 </div>
 <div class="form-group sf col-md-2">
        
-        <%= f.text_field :volunteers , class: "form-control"%>
+        <%= f.text_field :volunteers, required: true , type: "number",
+      min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
 </div>
 
 <div class="form-group sf col-md-1 remove-sub-form-button">
