--- a/app/views/paperpresenters/_paperpresenterdetail_fields.html.erb
+++ b/app/views/paperpresenters/_paperpresenterdetail_fields.html.erb
@@ -4,19 +4,19 @@
 
 <div class="form-group sf col-md-3">
         
-        <%= f.text_field :name_of_conference , class: "form-control"%>
+        <%= f.text_field :name_of_conference , required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-2">
        
-        <%= f.date_field :date_of_conference , class: "form-control"%>
+        <%= f.date_field :date_of_conference , required: true  , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-2">
         
-        <%= f.text_field :organised_by, class: "form-control" %>
+        <%= f.text_field :organised_by , required: true , class: "form-control" %>
 </div>
 <div class="form-group sf col-md-3">
        
-        <%= f.text_field :name_place_of_conference , class: "form-control"%>
+        <%= f.text_field :name_place_of_conference , required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-1">
        
