--- a/app/views/studentmaxpublishings/_publishingdetailbystudent_fields.html.erb
+++ b/app/views/studentmaxpublishings/_publishingdetailbystudent_fields.html.erb
@@ -4,20 +4,21 @@
     
 
 <div class="form-group sf col-md-2">
-        
-        <%= f.text_field :no_of_articles_published , class: "form-control" %>
+        <!--verify this field-->
+        <%= f.text_field :no_of_articles_published , required: true , type: "number",
+      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
 </div>
 <div class="form-group sf col-md-3">
        
-        <%= f.text_field :article_title , class: "form-control" %>
+        <%= f.text_field :article_title ,  required: true, class: "form-control" %>
 </div>
 <div class="form-group sf col-md-3">
         
-        <%= f.text_field :published_in , class: "form-control" %>
+        <%= f.text_field :published_in,  required: true, class: "form-control" %>
 </div>
 <div class="form-group sf col-md-3">
         
-        <%= f.date_field :date_of_publishing , class: "form-control" %>
+        <%= f.date_field :date_of_publishing ,  required: true, class: "form-control" %>
 </div>
 
 
